plugins {
    id 'java'
    id 'checkstyle'
}

group = 'io.kiradb'
version = '0.2.0'

// Apply to all subprojects
subprojects {
    apply plugin: 'java'
    apply plugin: 'checkstyle'

    group = 'io.kiradb'
    version = '0.1.0-SNAPSHOT'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        // Logging
        implementation 'org.slf4j:slf4j-api:2.0.16'
        runtimeOnly 'ch.qos.logback:logback-classic:1.5.15'

        // Testing
        testImplementation platform('org.junit:junit-bom:5.11.4')
        testImplementation 'org.junit.jupiter:junit-jupiter'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    test {
        useJUnitPlatform()
        jvmArgs '--enable-preview'
    }

    compileJava {
        options.compilerArgs += ['--enable-preview']
    }

    compileTestJava {
        options.compilerArgs += ['--enable-preview']
    }

    checkstyle {
        toolVersion = '10.21.0'
        configFile = rootProject.file('config/checkstyle/checkstyle.xml')
        ignoreFailures = false
        showViolations = true
    }
}
